Feat: add journey and chapter completion apis
