# src/apis/journeys/dtos/chapter-complete.dto.js
@@ -1,0 +1,5 @@
+import Joi from "joi";
+
+export default Joi.object().keys({
+  chapterId: Joi.string().required(),
+});
