# src/apis/journeys/journey.router.js
@@ -4,6 +4,7 @@ import asyncHandler from "express-async-handler";
 import journeyController from "./journey.controller";
 import journeyDto from "./dtos/journey.dto";
 import authentication from "../../common/middleware/authentication";
+import chapterCompleteDto from "./dtos/chapter-complete.dto";
 
 const routes = express.Router();
 
@@ -12,6 +13,13 @@ routes.post(
   authentication,
   validator.body(journeyDto),
   asyncHandler(journeyController.createJourney)
+);
+
+routes.post(
+  "/chapter-complete",
+  authentication,
+  validator.body(chapterCompleteDto),
+  asyncHandler(journeyController.completeChapter)
 );
 
 module.exports = routes;
